added nav effect and edit in address

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
-        <title>Example page</title>
+        <title>Fashion</title>
         <meta name="author" content="Joao G">
         <meta name="description" content="simple web base page">
         <meta name="keywords" content="html5, front end, css">
@@ -11,7 +11,7 @@
         <div class="initial-banner">
             <header class="nav-bar">
                 <div>
-                    <img src="imagens/logo.png">
+                    <img src="imagens/logo.png" alt="logotipo fashion">
                 </div>
                 <nav>
                     <ul>
@@ -46,14 +46,16 @@
         </main>
 
         <section class="part-2">
-            <h1>everything never enough just fashion</h1>
+            <h2>everything never enough just fashion</h2>
             <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
             </p>
         </section>
 
         <div class="contact">   
-            <strong>call me now for design <br>
-            012-1234-4567 </strong>
+            <address>
+                call me now for design <br>
+                012-1234-4567 
+            </address>
             </div>
 
         <section class="map">
